# zero2prod-rocket

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/fairings/: mod.rs  request_id.rs
app/src/routes/: health_check.rs  subscriptions.rs
app/tests/: health_check_test.rs  subscriptions_test.rs
app/tests/setup/: mod.rs
db/: Cargo.toml
db/migrations/2021-04-17-203731_create_subscriptions/: down.sql  up.sql
db/src/: lib.rs  schema.rs
db/src/models/: mod.rs  subscription.rs
migrations/2021-04-17-203731_create_subscriptions/: up.sql
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions_test.rs
tests/setup/: mod.rs
