[package]
name = "app"
version = "0.1.0"
authors = ["Kenaniah Cerny <kenaniah@gmail.com>"]
edition = "2018"

[lib]
name = "app"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["uuid"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
diesel = { version = "1", features = ["postgres", "extras", "chrono"] }
serde = "1.0.125"
chrono = "*"
db = { path = "../db" }
rand = "0"
tracing = { version = "0", features = ["log"] }
uuid = { version = "0", features = ["serde", "v4"] }

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
features = ["diesel_postgres_pool"]