[package]
name = "db"
version = "0.1.0"
authors = ["Kenaniah Cerny <kenaniah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1", features = ["postgres", "extras", "chrono"] }
chrono = "*"